[metadata]
name = jaraco.abode
author = Wil Schrader
author_email = wilrader@gmail.com
maintainer = Jason R. Coombs
maintainer_email = jaraco@jaraco.com
description = A library interfacing to the Abode home security system
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.abode
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.7
install_requires =
	requests >= 2.12.4
	lomond >= 0.3.3
	colorlog >= 3.0.1
	keyring
	requests_toolbelt
	jaraco.collections
	jaraco.context
	jaraco.classes
	more_itertools
	importlib_resources
	bx_py_utils

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-flake8
	# workaround for tholo/pytest-flake8#87
	flake8 < 5
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 1.3

	# local
	requests_mock>=1.3.0
	types-requests
	jaraco.collections >= 3.6

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9
	rst.linker >= 1.9
	furo

	# local

[options.entry_points]
console_scripts =
	abode = jaraco.abode.cli:main
