[metadata]
name = jaraco.abode
author = Wil Schrader
author_email = wilrader@gmail.com
maintainer = Jason R. Coombs
maintainer_email = jaraco@jaraco.com
description = A library interfacing to the Abode home security system
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.abode
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
python_requires = >=3.8
install_requires =
	requests >= 2.12.4
	lomond >= 0.3.3
	colorlog >= 3.0.1
	keyring
	requests_toolbelt
	jaraco.collections
	jaraco.context
	jaraco.classes
	jaraco.net >= 9
	more_itertools
	importlib_resources >= 5.10
	bx_py_utils
	platformdirs
	jaraco.itertools
	jaraco.functools >= 3.6

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local
	requests_mock
	types-requests
	jaraco.collections >= 4.1

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local

[options.entry_points]
console_scripts =
	abode = jaraco.abode.cli:main
